# cephaland

./: #Init.hs#  #Projectile.hs#  .#Projectile.hs  .gitignore  Data.hs  Data.hs~  Enemy.hs  Enemy.hs~  Game1.hs  Game1.hs~  Handler.hs  Handler.hs~  Init.hs  Init.hs~  Physics.hs  Physics.hs~  Projectile.hs  Projectile.hs~  README.md  Sword.hs  Sword.hs~  Util.hs  Util.hs~  apecs-physics.cabal  ceph - Shortcut.lnk  ceph.cabal  cephaland.cabal  cephaland.cabal~  midiToWav.bat  package.yaml  stack.yaml  stack.yaml~  test.mid  tmp.txt
.stack-work/: stack.sqlite3
.stack-work/ghci/4199080d/: cabal_macros.h
.stack-work/ghci/4385a943/: cabal_macros.h
.stack-work/ghci/85de74b2/: cabal_macros.h
.stack-work/ghci/dfc084bf/: cabal_macros.h
.stack-work/ghci/fb8dd9f7/: cabal_macros.h
.stack-work/install/35679cfc/lib/x86_64-windows-ghc-8.6.5/ceph-0.0.1-KsIipiOQQ1L5cK9BxCcnzd/: Main.hi  Paths_ceph.hi
.stack-work/install/35679cfc/lib/x86_64-windows-ghc-8.6.5/ceph-0.0.1-KsIipiOQQ1L5cK9BxCcnzd/Ceph/: Components.hi  Handler.hi  Jams.hi  Physics.hi  Scene.hi  Util.hi
.stack-work/install/35679cfc/pkgdb/: ceph-0.0.1-KsIipiOQQ1L5cK9BxCcnzd.conf  package.cache
.stack-work/install/3eebdf03/lib/x86_64-windows-ghc-8.6.5/ceph-0.0.1-D41gdtjil64C206Yqve7Ip/: Main.hi  Paths_ceph.hi
.stack-work/install/3eebdf03/lib/x86_64-windows-ghc-8.6.5/ceph-0.0.1-D41gdtjil64C206Yqve7Ip/Ceph/: Components.hi  Handler.hi  Jams.hi  Physics.hi  Scene.hi  Util.hi
.stack-work/install/3eebdf03/pkgdb/: ceph-0.0.1-D41gdtjil64C206Yqve7Ip.conf  package.cache
.stack-work/install/533592b1/lib/x86_64-windows-ghc-8.6.5/ceph-0.0.1-IjLSOwf1IxhF1acqKTsPBi/: Main.hi  Paths_ceph.hi
.stack-work/install/533592b1/lib/x86_64-windows-ghc-8.6.5/ceph-0.0.1-IjLSOwf1IxhF1acqKTsPBi/Ceph/: Components.hi
.stack-work/install/7c9e8fde/lib/x86_64-windows-ghc-8.6.5/ceph-0.0.1-IjLSOwf1IxhF1acqKTsPBi/: Main.hi  Paths_ceph.hi
.stack-work/install/7c9e8fde/lib/x86_64-windows-ghc-8.6.5/ceph-0.0.1-LoTOB83sCsS2XvzuQDtNSv/: Main.hi  Paths_ceph.hi
.stack-work/install/7c9e8fde/pkgdb/: ceph-0.0.1-LoTOB83sCsS2XvzuQDtNSv.conf  package.cache
.stack-work/install/a353fb39/lib/x86_64-windows-ghc-8.6.5/ceph-0.0.1-KmD5b6gHnjMKBQDvpU0ihE/: Main.hi  Paths_ceph.hi
.stack-work/install/a353fb39/pkgdb/: ceph-0.0.1-KmD5b6gHnjMKBQDvpU0ihE.conf  package.cache
.stack-work/install/b6a29c5c/lib/x86_64-windows-ghc-8.6.5/ceph-0.0.1-1jj8R0Jfwd8HpKzdEoJhgQ/: Main.hi  Paths_ceph.hi
.stack-work/install/b6a29c5c/pkgdb/: ceph-0.0.1-1jj8R0Jfwd8HpKzdEoJhgQ.conf  package.cache
.stack-work/install/babb6a16/lib/x86_64-windows-ghc-8.6.5/ceph-0.0.1-JPUIgHiPtCtKeUm3CiT1XE/: Main.hi  Paths_ceph.hi
.stack-work/install/babb6a16/lib/x86_64-windows-ghc-8.6.5/ceph-0.1.0-3uJmS2RgDN5D6T8zRfQGJB/: Main.hi  Paths_ceph.hi
.stack-work/install/babb6a16/pkgdb/: ceph-0.1.0-3uJmS2RgDN5D6T8zRfQGJB.conf  package.cache
.stack-work/install/d1545c6f/lib/x86_64-windows-ghc-8.6.5/ceph-0.0.1-8NurfrGds4W8aJWJxNpmhN/: Main.hi  Paths_ceph.hi
.stack-work/install/d1545c6f/pkgdb/: ceph-0.0.1-8NurfrGds4W8aJWJxNpmhN.conf  package.cache
.stack-work/install/d6a1dbeb/lib/x86_64-windows-ghc-8.6.5/ceph-0.0.1-AOVutLen7ww68OL82eTVYV/: Main.hi  Paths_ceph.hi
.stack-work/install/x86_64-linux/lts-9.11/8.0.2/flag-cache/: apecs-0.3.0.2-3aLSJQBwsM0kznf02mpW3  apecs-0.4.0.1-GdU875dS4Dz3fqUwwVBzJ2  apecs-physics-0.2.0.0-1w1pmaFsV1m7jqJL2b3ZBv  apecs-physics-gloss-0.1.0.0-IHs9rSfe2r9Jb3nEMlHfQY  cephaland-0.1.0.0  gloss-juicy-0.2.2-IE8irSKuYpN9p5TRSihwez  sdl2-mixer-1.1.0-F2jNvnT14Wy4OjqE1WcUiH
.stack-work/install/x86_64-linux/lts-9.11/8.0.2/pkgdb/: apecs-0.4.0.1-GdU875dS4Dz3fqUwwVBzJ2.conf  gloss-juicy-0.2.2-IE8irSKuYpN9p5TRSihwez.conf  package.cache  sdl2-mixer-1.1.0-F2jNvnT14Wy4OjqE1WcUiH.conf
.stack-work/install/x86_64-linux/lts-9.2/8.0.2/flag-cache/: JuicyPixels-3.2.8.3-5IOlo1rE8WxAfqhWPTAe4N  apecs-0.3.0.2-3aLSJQBwsM0kznf02mpW3  apecs-0.4.0.1-GdU875dS4Dz3fqUwwVBzJ2  apecs-0.4.1.0-5Dq3f9B8Tv5E9yBPZjGUoi  cephaland-0.1.0.0  data-default-class-0.1.2.0-GsXqKN6o1X9jr0fF5qCVD  gloss-juicy-0.2.2-IE8irSKuYpN9p5TRSihwez  lifted-base-0.2.3.11-Ei0JSPdt7KOCD2HIA5jFqV  monad-control-1.0.2.2-1Ci8dYJ8Tb7E3HTcTqOb8l  sdl2-mixer-1.1.0-LX59oFy5f5B564Mb5zRJ6y  transformers-base-0.4.4-GKSs0LKukAL8ymq2naFmrH  zlib-0.6.1.2-7negTfm2ujt1gW4wr40MUp
.stack-work/install/x86_64-linux/lts-9.2/8.0.2/pkgdb/: apecs-0.4.1.0-5Dq3f9B8Tv5E9yBPZjGUoi.conf  gloss-juicy-0.2.2-IE8irSKuYpN9p5TRSihwez.conf  package.cache  sdl2-mixer-1.1.0-LX59oFy5f5B564Mb5zRJ6y.conf
apecs-physics-gloss/src/Apecs/Physics/: Gloss.hs
examples/: Constraints.hs
seffyball/: Data.hs  Enemy.hs  Game1.hs  Handler.hs  Init.hs  Projectile.hs  Util.hs  seffyball.cabal
soundfonts/: GeneralUser GS v1.471.cfg.txt  TimGM6mb.cfg.txt
src/: Game.hs  Main.hs
src/Apecs/Physics/: Body.c  Collision.c  Constraint.c  Geometry.hs  Query.c  Shape.c  Shape.hs  Space.c
src/Ceph/: Components.hs  Handler.hs  Jams.hs  Physics.hs  Scene.hs  TypeStuff.hs  Util.hs
src/Ceph/Component/: Enemy.hs  Levels.hs  Player.hs  Projectile.hs  Sword.hs  Wall.hs  Weapon.hs
src/Ceph/Entity/: Enemy.hs  Projectile.hs  Sword.hs
src/Ceph/Physics/: Box.hs
src/Ceph/Scene/: Board.hs  Camera.hs  HUD.hs
(+184 files in other folders)
