name:  cephaland
version:  0.1.0.0
synopsis:  2d platformer game
description: fight with octopi, nautlus, and squid on the ocean floor
homepage:
license:  BSD3
author:  Robert Glorioso
maintainer:  Grousebert@gmail.com
copyright:  MIT
category:  Game
build-type:  Simple
cabal-version:  >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Ceph.Physics
                     , Ceph.Physics.Box

                     , Ceph.Entity.Sword
                     , Ceph.Entity.Projectile
                     , Ceph.Entity.Enemy

                     , Ceph.Scene
                     , Ceph.Scene.Camera
                     , Ceph.Scene.HUD

                     , Ceph.Components
                     , Ceph.Util
                     , Ceph.Handler
  build-depends:       apecs
                     , base
                     , gloss
                     , gloss-juicy >= 0.2.2
                     , linear
                     , optparse-applicative >= 0.13.2.0
                     , random
                     , SDL >= 0.6.6.0
                     , streamly >= 0.4.1
                     --, sdl2
                     --, sdl2-mixer >= 1.1.0
  
                       
executable cephaland
  hs-source-dirs:      src
  main-is:             Game.hs
  ghc-options:         -O2
  build-depends:       apecs
                     , base
                     , gloss
                     , gloss-juicy >= 0.2.2
                     , linear
                     , optparse-applicative >= 0.13.2.0
                     , random
                     , SDL >= 0.6.6.0
                     , streamly >= 0.4.1
                     --, sdl2
                     --, sdl2-mixer >= 1.1.0
                
  default-language:    Haskell2010

        