name:                seffyball
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jonascarpay/apecs-physics/apecs-physics-examples#readme
author:              Robert Glorioso
maintainer:          robertglorioso@gmail.com
copyright:           MIT
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable seffyball
  hs-source-dirs:      .
  main-is:             Game1.hs
  ghc-options:         -O2
  build-depends:       base
                     , apecs
                     , apecs-physics
                     , apecs-physics-gloss
                     , gloss
                     , gloss-juicy >= 0.2.2
                     , linear
                     , random
                     , sdl2
                     , sdl2-mixer >= 1.1.0
                
  default-language:    Haskell2010
